# oogiri-ai

./: .gitignore  .replit  ai_steps.py  algorithm.py  app.py  dajare_engine.py  pyproject.toml  requirements.txt  scraper.py
data/: reference_answers.json
static/: style.css
templates/: algorithm.html  index.html
