[project]
name = "oogiri-dajare-ai"
version = "2.0.0"
description = "大喜利ダジャレ生成エンジン - New_oogiri_arg"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "anthropic>=0.40",
    "gunicorn>=23.0",
    "requests>=2.31",
    "google-generativeai>=0.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
